--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+cat <<EOF > .gitignore
 # Logs
 logs
 *.log
@@ -16,6 +17,7 @@ dist-ssr
 .vscode/*
 !.vscode/extensions.json
 .idea
+.env
 .DS_Store
 *.suo
 *.ntvs*
@@ -24,3 +26,4 @@ dist-ssr
 *.sw?
 
 .config/
+EOF
